Corrected path to one image and updated H1

--- a/site/pages/v4/writing/dvlpmnt-fr.hbs
+++ b/site/pages/v4/writing/dvlpmnt-fr.hbs
@@ -1,6 +1,6 @@
 ---
 {
-	"title": "Architecture de contenu",
+	"title": "Développement de contenu",
 	"language": "fr",
 	"altLangPrefix": "dvlpmnt",
 	"dateModified": "2016-10-17"
