--- a/site/pages/v4/index-fr.hbs
+++ b/site/pages/v4/index-fr.hbs
@@ -4,7 +4,8 @@
 	"language": "fr",
 	"altLangPrefix": "index",
 	"css": ["https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome", "design/css/gridify" ],
-	"dateModified": "2016-10-17"
+	"dateModified": "2016-10-17",
+  "notlisted": true
 }
 ---
 
