Style Guide - Added table filtering for French index and restored documentation for pills, jumbotron and progress and meter

--- a/site/pages/v4/design/jumbotron-fr.hbs
+++ b/site/pages/v4/design/jumbotron-fr.hbs
@@ -1,7 +1,7 @@
 ---
 {
 	"title": "Jumbotron",
-	"language": "en",
+	"language": "fr",
 	"altLangPrefix": "jumbotron",
 	"css": ["https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome", "css/gridify" ],
 	"dateModified": "2016-11-02"
@@ -10,9 +10,10 @@
 <span class="wb-prettify all-pre"></span>
 
 <div class="alert alert-info">
-   <p>We are currently working on redesigning the following content.</p>
+   <p>Nous travaillons présentement à traduire ce contenu en français et à le reconcevoir.</p>
 </div>
 
+<div lang="en">
 <div class="row">
 	<section class="col-md-8">
 		<div class="panel panel-default">
@@ -90,3 +91,5 @@
 </section>
 
 <p class="mrgn-tp-lg"><span class="glyphicon glyphicon-info-sign"></span> Some of the code and documentation for this page is sourced from <a href="http://getbootstrap.com/" rel="external">Bootstrap</a></p>
+
+</div>
