--- a/site/pages/v4/design/listgroup-fr.hbs
+++ b/site/pages/v4/design/listgroup-fr.hbs
@@ -1,6 +1,6 @@
 ---
 {
-	"title": "Groupe de listes",
+	"title": "Regroupement de liste",
 	"language": "fr",
 	"altLangPrefix": "listgroup",
 	"css": ["https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome", "css/gridify" ],
@@ -119,7 +119,7 @@
       <h5 class="mrgn-tp-0 text-success"><span class="glyphicon glyphicon-ok-circle"></span> Bonne utilisation</h5>
 <p><span class="nowrap">Points de conformité&nbsp;:</span></p>
         <ul>
-	  <li>Des couleurs d'arrière-plan peuvent être ajoutées : 
+	  <li>Des couleurs d'arrière-plan peuvent être ajoutées :
 	    <ul>
 	  <li><code>.list-group-item-success</code> lorsque l'élément est exact</li>
 	  <li><code>.list-group-item-info</code> lorsque l'élément est à titre d'information</li>
