--- a/site/pages/v4/design/progressmeter-fr.hbs
+++ b/site/pages/v4/design/progressmeter-fr.hbs
@@ -1,7 +1,7 @@
 ---
 {
-	"title": "Progress bar and meter",
-	"language": "en",
+	"title": "Barre de progrès et mesure",
+	"language": "fr",
 	"altLangPrefix": "progressmeter",
 	"css": ["https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome", "css/gridify" ],
 	"dateModified": "2016-11-02"
@@ -10,9 +10,10 @@
 <span class="wb-prettify all-pre"></span>
 
 <div class="alert alert-info">
-   <p>We are currently working on redesigning the following content.</p>
+   <p>Nous travaillons présentement à traduire ce contenu en français et à le reconcevoir.</p>
 </div>
 
+<div lang="en">
 <div class="row">
 	<section class="col-md-8">
 		<div class="panel panel-default">
@@ -292,3 +293,4 @@ $( document ).on( &quot;click vclick&quot;, &quot;#increaseMeter, #decreaseMeter
 		</section>
 	</div>
 </section>
+</div>
