--- a/site/pages/v4/design/wells-fr.hbs
+++ b/site/pages/v4/design/wells-fr.hbs
@@ -1,6 +1,6 @@
 ---
 {
-	"title": "Wells",
+	"title": "Boîte grisonné",
 	"language": "fr",
 	"altLangPrefix": "wells",
 	"css": ["https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome", "css/gridify" ],
