--- a/site/pages/v4/design/whitespace-fr.hbs
+++ b/site/pages/v4/design/whitespace-fr.hbs
@@ -1,6 +1,6 @@
 ---
 {
-	"title": "Espacement / No wrap",
+	"title": "Espacement",
 	"language": "fr",
 	"altLangPrefix": "whitespace",
 	"css": ["https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome", "css/gridify" ],
