--- a/site/pages/v4/index-en.hbs
+++ b/site/pages/v4/index-en.hbs
@@ -26,8 +26,6 @@
     <li>Features to enhance the functionality of a page (ajax, session timeout and so forth)</li>
   </ul>
   <p class="mrgn-bttm-lg">Refer to: <a href="http://wet-boew.github.io/v4.0-ci/demos/index-en.html">Working examples</a> for further details. </p>
-  <div class="well">
-
 <form class="wb-tables-filter" data-bind-to="designlayout">
 <div class="row">
 <div class="col-md-4">
@@ -107,6 +105,7 @@
 	<option value="Progress bar and meter">Progress bar and meter</option>
 	<option value="Wells">Wells</option>
 </optgroup>
+
 </select>
 </div>
 </div>
@@ -119,10 +118,6 @@
 </div>
 </div>
 </form>
-
-
-
-
     <table id="designlayout" class="wb-tables tbl-gridify" data-wb-tables='{"order" : [ 0, "asc" ], "bPaginate" : false,
              "columnDefs": [
                 { "targets": [4], "visible": false },
@@ -308,7 +303,7 @@
               </li>
             </ul></td>
 			<td>CSS Style</td>
-			<td>Basic effects</td>
+			<td>Basic effects,Text effects,Callouts</td>
 			<td>Buttons</td>
         </tr>
 
@@ -792,6 +787,21 @@
 		  <td>Invisible and visible content</td>
         </tr>
 
+		<tr class="col-xs-12 col-sm-6 col-md-4">
+          <td><a href="design/jumbotron-en.html" class="h4 mrgn-tp-0 mrgn-bttm-0">Jumbotron</a></td>
+          <td><p>A lightweight, flexible component that can optionally extend the entire viewport to showcase key content on your site.</p></td>
+          <td class="text-muted small">Tags: Colour, Alerts</td>
+          <td><hr class="mrgn-tp-0">
+            <div class="jumbotron">
+				<p>Hello world</p>
+			</div>
+		  </td>
+		  <td>CSS Style</td>
+		  <td>Callouts</td>
+		  <td>Jumbotron</td>
+        </tr>
+
+
         <tr class="col-xs-12 col-sm-6 col-md-4">
           <td><a href="design/keyboard-en.html" class="h4 mrgn-tp-0 mrgn-bttm-0">Keyboard keys </a></td>
           <td><p>Use  to mimic the keys of a computer keyboard. </p></td>
@@ -1122,6 +1132,28 @@
 		  <td>Panels</td>
         </tr>
 
+		<tr class="col-xs-12 col-sm-6 col-md-4">
+           <td><a href="design/pills-en.html" class="h4 mrgn-tp-0 mrgn-bttm-0">Pills</a></td>
+          <td><p>(Description missing)</p></td>
+          <td class="text-muted small">Tags: List</td>
+          <td><hr class="mrgn-tp-0">
+            <p><span class="glyphicon glyphicon-eye-close"></span> No quick preview available.</p></td>
+		  <td>CSS Style</td>
+		  <td>Menus and navigation</td>
+		  <td>Pills</td>
+        </tr>
+
+		<tr class="col-xs-12 col-sm-6 col-md-4">
+           <td><a href="design/progressmeter-en.html" class="h4 mrgn-tp-0 mrgn-bttm-0">Progress bar and meter</a></td>
+          <td><p>(Description missing)</p></td>
+          <td class="text-muted small">Tags: </td>
+          <td><hr class="mrgn-tp-0">
+            <p><span class="glyphicon glyphicon-eye-close"></span> No quick preview available.</p></td>
+		  <td>CSS Style</td>
+		  <td>Callouts</td>
+		  <td>Progress bar and meter</td>
+        </tr>
+
         <tr class="col-xs-12 col-sm-6 col-md-4">
           <td><a href="http://wet-boew.github.io/v4.0-ci/docs/ref/progress/progress-en.html"  class="h4 mrgn-tp-0 mrgn-bttm-0">Progress bar </a></td>
           <td><p>Use  to display the progress of a task. </p></td>
@@ -1281,7 +1313,7 @@
 
         <tr class="col-xs-12 col-sm-6 col-md-4">
           <td><a href="design/textediting-en.html"  class="h4 mrgn-tp-0 mrgn-bttm-0">Text editing effects</a></td>
-          <td>Use to indicate text edits on a page. <span class="label label-info">New</span></td>
+          <td>Use to indicate text edits on a page. <span class="badge">New</span></td>
           <td class="text-muted small">Tags: Text edits</td>
           <td><hr class="mrgn-tp-0">
             <p>This is
@@ -1488,7 +1520,7 @@
 
         <tr class="col-xs-12 col-sm-6 col-md-4">
           <td><a href="design/variables-en.html" class="h4 mrgn-tp-0 mrgn-bttm-0">Variables</a></td>
-          <td><p>Use  when there is reference to a variable like “x.”, &quot;n&quot; or &quot;y&quot; within a  sentence (a non-mathematical phrase). <span class="label label-info">New</span></p></td>
+          <td><p>Use  when there is reference to a variable like “x.”, &quot;n&quot; or &quot;y&quot; within a  sentence (a non-mathematical phrase). <span class="badge">New</span></p></td>
           <td class="text-muted small">Tags: Calculations</td>
           <td><hr class="mrgn-tp-0">
             Over <var>n</var> years, the increase in payments is <var>x</var>.</td>
@@ -1541,4 +1573,3 @@
         </tr>
       </tbody>
     </table>
-  </div>
