Put reference to Font Awesome icons set

--- a/site/pages/v4/writing/rchtctr-fr.hbs
+++ b/site/pages/v4/writing/rchtctr-fr.hbs
@@ -3,6 +3,7 @@
 	"title": "Architecture de contenu",
 	"language": "fr",
 	"altLangPrefix": "rchtctr",
+	"css": ["https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome"],
 	"dateModified": "2016-10-17"
 }
 ---
