--- a/site/pages/v4/writing/strctr-fr.hbs
+++ b/site/pages/v4/writing/strctr-fr.hbs
@@ -3,6 +3,7 @@
 	"title": "Structure et présentation du contenu",
 	"language": "fr",
 	"altLangPrefix": "strctr",
+	"css": ["https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome"],
 	"dateModified": "2016-10-17"
 }
 ---
