--- a/site/pages/v4/writing/rchtctr-en.hbs
+++ b/site/pages/v4/writing/rchtctr-en.hbs
@@ -3,6 +3,7 @@
 	"title": "Content architecture",
 	"language": "en",
 	"altLangPrefix": "rchtctr",
+	"css": ["https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome"],
 	"dateModified": "2016-10-17"
 }
 ---
