--- a/site/pages/v4/design/colour-en.hbs
+++ b/site/pages/v4/design/colour-en.hbs
@@ -28,6 +28,7 @@
                 </li>
               </ul>
             </li>
+			<li><a href="#supporting">Supporting principles</a></li>
           </ul>
         </div>
       </div>
@@ -276,3 +277,6 @@
     <li><a class="btn btn-default" href="icons-en.html">Icons</a></li>
   </ul>
   <p class="mrgn-tp-lg text-muted">Some of the code and documentation for this page is sourced from <a href="http://getbootstrap.com/" >Bootstrap<span  class="wb-inv"> (external link)</span></a></p>
+  
+   <h2 id="supporting"><span class="fa-stack"> <span class="fa fa-circle fa-stack-2x"></span> <span class="fa fa-bookmark fa-stack-1x fa-inverse"></span> </span> Supporting principles</h2>
+  <div data-ajax-replace="../writing/strctr-en.html #colour-info"></div>
