Minor edits to text on colour pages

--- a/site/pages/v4/design/colour-fr.hbs
+++ b/site/pages/v4/design/colour-fr.hbs
@@ -285,7 +285,8 @@
   <ul class="list-inline lst-spcd">
     <li><a class="btn btn-default" href="icons-en.html">Icônes</a></li>
   </ul>
-  <p class="mrgn-tp-lg text-muted">Une partie du code et des documents pour cette page est tirée de <a href="http://getbootstrap.com/" >Bootstrap<span  class="wb-inv"> (lien externe)</span></a></p>
-  
+
   <h2 id="supporting"><span class="fa-stack"> <span class="fa fa-circle fa-stack-2x"></span> <span class="fa fa-bookmark fa-stack-1x fa-inverse"></span> </span> Principes de soutien</h2>
-  <div data-ajax-replace="../writing/strctr-fr.html #heading-colour"></div>
+  <div data-ajax-replace="../writing/strctr-fr.html #colour-info"></div>
+  
+    <p class="mrgn-tp-lg text-muted">Une partie du code et des documents pour cette page est tirée de <a href="http://getbootstrap.com/" >Bootstrap<span  class="wb-inv"> (lien externe)</span></a></p>
