Minor updates to the links within the page

--- a/site/pages/v4/writing/rchtctr-en.hbs
+++ b/site/pages/v4/writing/rchtctr-en.hbs
@@ -115,8 +115,8 @@
         <li><span class="fa fa-li fa-check text-success"></span> Do not duplicate content</li>
       </ul>
     </div>
-    <p>Providing information &ldquo;at the point of need&rdquo; means placing the right amount of information &ndash; <strong>no more and no less</strong> &minus; in the context where a user would expect to find it. To provide information at the point of need, you need to know <strong>what information users would expect to find together in one place </strong>to help them complete a task and what information they would expect to find in a different context, without loss of meaning. You must also effectively balance it with the principle of progressive disclosure; refer to <a href="#present">Present information gradually though progressive disclosure</a>.</p>
-    <p>Requirement to provide content at the point of need does not mean you can duplicate content! Refer to <a href="dvlpmnt-en.html#reuse">Reuse, recycle, and reduce content.</a></p>
+    <p>Providing information &ldquo;at the point of need&rdquo; means placing the right amount of information &ndash; <strong>no more and no less</strong> &minus; in the context where a user would expect to find it. To provide information at the point of need, you need to know <strong>what information users would expect to find together in one place </strong>to help them complete a task and what information they would expect to find in a different context, without loss of meaning. You must also effectively balance it with the principle of progressive disclosure; refer to <a href="http://wet-boew.github.io/wet-boew-styleguide/v4/writing/rchtctr-en.html#present">Present information gradually though progressive disclosure</a>.</p>
+    <p>Requirement to provide content at the point of need does not mean you can duplicate content! Refer to <a href="http://wet-boew.github.io/wet-boew-styleguide/v4/writing/dvlpmnt-en.html#reuse">Reuse, recycle, and reduce content.</a></p>
   </div>
   <h2 id="present"><span id="present-heading">Present information gradually through progressive disclosure</span></h2>
   <div id="present-info">
