--- a/site/pages/v4/writing/strctr-en.hbs
+++ b/site/pages/v4/writing/strctr-en.hbs
@@ -102,7 +102,7 @@
   <li><strong>Keep information specific to  the tasks </strong></li>
   <li><strong>Present it logically or  sequentially in a location where users expect to find it</strong></li>
   <li>Ensure information is timely  and relevant, not redundant or trivial</li>
-  <li><a href="#alt">Avoid multiple and alternative formats </a></li>
+  <li><a href="http://wet-boew.github.io/wet-boew-styleguide/v4/writing/strctr-en.html#alt">Avoid multiple and alternative formats </a></li>
 </ul>
 
 
