--- a/site/pages/v4/writing/strctr-fr.hbs
+++ b/site/pages/v4/writing/strctr-fr.hbs
@@ -106,7 +106,7 @@
   <li><strong>Gardez l'information spécifiques au tâches</strong></li>
   <li><strong>Présentez la logiquement ou séquentiellement dans un endroit ou les utilisateurs peuvent espérer la trouver</strong></li>
   <li>Assurez-vous que l'information est récente et pertinente, non redondante ou triviale</li>
-  <li><a href="#alt">Évitez les médias substituts et de remplacement</a></li>
+  <li><a href="http://wet-boew.github.io/wet-boew-styleguide/v4/writing/strctr-fr.html#alt">Évitez les médias substituts et de remplacement</a></li>
 </ul>
 
 
