Update French text of Firefox bug.

--- a/site/pages/v4/design/buttons-fr.hbs
+++ b/site/pages/v4/design/buttons-fr.hbs
@@ -103,7 +103,7 @@
       <ul>
         <li><strong>Utilisez l'élément  <code>&lt;button&gt;</code> tant que possible</strong> afin de vous assurer  de la concordance avec le rendu multinavigateur
               <ul>
-            <li>Il y a un<a href="https://bugzilla.mozilla.org/show_bug.cgi?id=697451" > bogue dans  Firefox </a> that qui rend impossible l'établissement de  <code>line-height</code> dans les boutons fondés sur <code>&lt;input&gt;</code></li>
+            <li>Il y a un<a href="https://bugzilla.mozilla.org/show_bug.cgi?id=697451" > bogue dans  Firefox &lt;30</a> that qui rend impossible l'établissement de  <code>line-height</code> dans les boutons fondés sur <code>&lt;input&gt;</code></li>
             <li>La hauteur de ces boutons est inégale dans Firefox</li>
           </ul>
         </li>
