--- a/site/pages/v4/design/borders-en.hbs
+++ b/site/pages/v4/design/borders-en.hbs
@@ -204,7 +204,7 @@
     </div>
   </div>
   <h4 id="radius"><span class="fa-stack"><span class="fa fa-circle fa-stack-2x"></span><span class="fa fa-stack-1x fa-inverse">&lceil;</span></span> Remove border radius</h4>
-  <p>Use to remove the border radius from a design component, like a <a href="well-en.html">well</a>.</p>
+  <p>Use to remove the border radius from a design component, like a <a href="wells-en.html">well</a>.</p>
   <div class="row">
     <div class="col-md-4">
       <div class="panel panel-default">
