Fix French 'Wells' link pointing to English page.

--- a/site/pages/v4/design/borders-fr.hbs
+++ b/site/pages/v4/design/borders-fr.hbs
@@ -209,7 +209,7 @@
     </div>
   </div>
   <h4 id="radius"><span class="fa-stack"><span class="fa fa-circle fa-stack-2x"></span><span class="fa fa-stack-1x fa-inverse">&lceil;</span></span> Retirer un rayon de bordure </h4>
-  <p>Utilisez pour retirer le rayon de bordure à partir d'une composante de conception, comme un <a href="well-en.html">puits</a>.</p>
+  <p>Utilisez pour retirer le rayon de bordure à partir d'une composante de conception, comme un <a href="wells-fr.html">puits</a>.</p>
   <div class="row">
     <div class="col-md-4">
       <div class="panel panel-default">
