Fix link to the table validator.
Using the link that Paul provided.

--- a/site/pages/v4/accessibility/guide-en.hbs
+++ b/site/pages/v4/accessibility/guide-en.hbs
@@ -691,7 +691,7 @@
 				<li>
 					<p>Associate <code>&lt;td&gt;</code> data cells to one or more <code>&lt;th&gt;</code> header cells for <a href="simpletable">non-simple tables</a>.</p>
 					<ul>
-						<li>See <a href="http://wet-boew.github.io/wet-boew/demos/tableparser/validator-htmltable.html">Table Usability</a></li>
+						<li>See <a href="http://wet-boew.github.io/v4.0-ci/demos/tablevalidator/tablevalidator-en.html">Table Usability</a></li>
 					</ul>
 				</li>
 			</ul>
