--- a/site/pages/v4/design/whitespace-fr.hbs
+++ b/site/pages/v4/design/whitespace-fr.hbs
@@ -1,13 +1,13 @@
 ---
 {
-	"title": "Espacement",
+	"title": "Envelopper et tronquer le texte",
 	"language": "fr",
 	"altLangPrefix": "whitespace",
 	"css": ["https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome", "css/gridify" ],
-	"dateModified": "2016-10-17"
+	"dateModified": "2016-11-23"
 }
 ---
-
+  
   <span class="wb-prettify all-pre"></span>
   <div class="row">
     <section class="col-md-8">
@@ -20,7 +20,8 @@
             <li><a href="#purpose">Usage</a></li>
             <li><a href="#design">Conception et codage</a>
               <ul>
-                <li><a href="#basic">Utilisation de base</a> </li>
+                <li><a href="#basic">Utilisation de base</a></li>
+				<li><a href="#enhanced">Utilisation améliorée</a></li>
               </ul>
             </li>
           </ul>
@@ -49,9 +50,9 @@
         <div class="panel-body">
           <h5 class="mrgn-tp-0">Apparence</h5>
           <p>Défaut :</p>
-          <p>Cette année, la date limite pour produire sa déclaration de revenus est le 30 avril.</p>
+          <p>Lorem ipsum dolor sit amet, consectetur <strong>30 avril</strong>.</p>
           <p class="mrgn-tp-lg">Avec <code>.nowrap</code> :</p>
-          <p>Cette année, la date limite pour produire sa déclaration de revenus est le <span class="nowrap">30 avril</span>.</p>
+          <p>Lorem ipsum dolor sit amet, consectetur <span class="nowrap"><strong>30 avril</strong></span>.</p>
         </div>
       </div>
     </div>
@@ -70,7 +71,7 @@
       <h5 class="mrgn-tp-0 text-danger"><span class="glyphicon glyphicon-remove-circle"></span> Mauvaise utilisation</h5>
       <p><span class="nowrap">Points de conformité&nbsp;:</span></p>
       <ul>
-        <li>N'utilisez pas cet élément d'une façon qui entre en conflit avec <span class="nowrap">les points</span>  d'observation  <span class="nowrap">précédents</span></li>
+        <li>N'utilisez pas cet élément d'une façon qui entre en conflit avec <span class="nowrap">les points</span> de conformité  <span class="nowrap">précédents</span></li>
         <li>Ne l'utilisez pas pour renvoyer automatiquement des phrases complètes à la ligne suivante</li>
         <li>Ne l'utilisez pas pour l'information non textuelle</li>
       </ul>
@@ -80,3 +81,50 @@
       <pre><code>&lt;p&gt;... &lt;span<strong> class=&quot;nowrap&quot;</strong>&gt;30 avril&lt;/span&gt;.&lt;/p&gt;</code></pre>
     </div>
   </div>
+    <h3 id="enhanced">Utilisation améliorée</h3>
+	<h4 id="default"><span class="fa-stack"><span class="fa fa-circle fa-stack-2x"></span><span class="fa fa-ellipsis-h fa-stack-1x fa-inverse"></span></span> Tronqué</h4>
+	 <p>Utiliser pour tronquer le texte pour qu'il s'insère dans une colonne de grille sur une seule ligne. Tout texte au-delà de la bordure de la grille sera recadré et remplacé par un trois points. Le texte disparaît seulement visuellement, il peut cependant toujours être lu par les lecteurs d'écran.</p>
+     <div class="row">
+    <div class="col-md-4">
+        <div class="panel panel-default">
+          <div class="panel-body">
+            <h5 class="mrgn-tp-0">Apparence</h5>
+		  <p>Défaut :</p>
+		    <p>Lorem ipsum dolor sit amet, consectetur <strong>30 avril</strong>.</p>
+			<p>Avec <code>.wb-elps</code> :
+		   <p class="wb-elps">Lorem ipsum dolor sit amet, consectetur <strong>30 avril</strong>.</p>
+          </div>
+ </div>
+       </div>
+      <div class="col-md-4">
+        <h5 class="mrgn-tp-0 text-success"><span class="glyphicon glyphicon-ok-circle"></span> Bonne utilisation</h5>
+        <p>Point de conformité :</p>
+        <ul>
+          <li>Utilisez principalement avec des hyperliens pour prévenir un retour automatique à la ligne (si la hauteur est une préoccupation et que <code>.wb-eqht</code> ne peut être appliqué) ou s'il affiche en dehors des colonnes d'une grille (quand <code>.nowrap</code> est appliqué)</li> 
+        </ul>
+        <h5 class="mrgn-tp-0 text-danger"><span class="glyphicon glyphicon-remove-circle"></span> Mauvaise utilisation</h5>
+        <p>Points de conformité :</p>
+        <ul>
+          <li>Ne pas utiliser ce style pour des phrases, car il peut cacher des informations à un utilisateur visuel</li>
+		  <li>Ne pas utiliser à la place de <code>.wb-eqht</code> lorsque vous tentez d'obtenir une hauteur égale sur une rangée de grille</li>
+          <li>N'utilisez pas cet élément d'une façon qui entre en conflit avec le point de conformité précédent</li>
+        </ul>
+      </div>
+    <div class="col-md-4">
+        <h5 class="mrgn-tp-0">Code</h5>
+      <pre>&lt;p class=&quot;wb-elps&quot;&gt;...&lt;/p&gt;</pre>
+      </div>
+    </div>
+
+  <!-- SEARCH CONTENT ENDS / CONTENU RECHERCHE TERMINE -->
+ 
+<!--[if gte IE 9 | !IE ]><!-->
+<script src="/wet40/js/jquery.js"></script>
+<script src="/wet40/js/wet-boew.min.js"></script>
+<!--<![endif]-->
+<!--[if lt IE 9]>
+<script src="/wet40/js/ie8-wet-boew2.min.js"></script>
+<![endif]-->
+<script src="/wet40/js/theme.min.js"></script>
+</body>
+</html>
