Fixed missing a href on demo button

--- a/site/pages/v4/design/jumbotron-en.hbs
+++ b/site/pages/v4/design/jumbotron-en.hbs
@@ -60,7 +60,7 @@
             <section class="jumbotron">
               
               <p>A component for calling extra attention to featured content or information.</p>
-              <p><a class="btn btn-info btn-lg" role="button">Learn more</a></p>
+              <p><a class="btn btn-info btn-lg" role="button" href="#">Learn more</a></p>
             </section>
           </div>
  </div>
