--- a/site/pages/v4/design/jumbotron-fr.hbs
+++ b/site/pages/v4/design/jumbotron-fr.hbs
@@ -60,7 +60,7 @@
             <section class="jumbotron">
               
               <p>Un composant pour attirer une attention supplémentaire sur le contenu ou l'information en vedette.</p>
-              <p><a class="btn btn-info btn-lg" role="button">En savoir plus</a></p>
+              <p><a class="btn btn-info btn-lg" role="button" href="#">En savoir plus</a></p>
             </section>
           </div>
  </div>
